--- a/index.Rmd
+++ b/index.Rmd
@@ -108,4 +108,20 @@ class: top, center
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">FWIW you can accomplish something similar with base R tools now: e.g. `library(pkg, include.only = c(&quot;f1&quot;, &quot;f2&quot;))` will load &lt;pkg&gt; but only put functions f1 and f2 on the search path. Moral equivalent of &quot;from pkg import f1, f2&quot;?</p>&mdash; Kevin Ushey (@kevin_ushey) <a href="https://twitter.com/kevin_ushey/status/1281085273154048000?ref_src=twsrc%5Etfw">July 9, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </center>
 
+---
+
+class: top, center
+
+.frame[
+
+# Tip #04: Handle ambiguous function names elegantly using `conflicted` package
+
+]
+
+<center>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">The conflicted 📦 is now on CRAN: <a href="https://t.co/ngXtwiOePf">https://t.co/ngXtwiOePf</a> — make ambiguous function names explicit errors <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://t.co/TDuCNx3s8N">pic.twitter.com/TDuCNx3s8N</a></p>&mdash; Hadley Wickham (@hadleywickham) <a href="https://twitter.com/hadleywickham/status/1003700738009075716?ref_src=twsrc%5Etfw">June 4, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</center>
+
+
+
 
