Add drake approve-disapprove meme for here pkg

--- a/index.Rmd
+++ b/index.Rmd
@@ -122,6 +122,30 @@ class: top, center
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The conflicted 📦 is now on CRAN: <a href="https://t.co/ngXtwiOePf">https://t.co/ngXtwiOePf</a> — make ambiguous function names explicit errors <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://t.co/TDuCNx3s8N">pic.twitter.com/TDuCNx3s8N</a></p>&mdash; Hadley Wickham (@hadleywickham) <a href="https://twitter.com/hadleywickham/status/1003700738009075716?ref_src=twsrc%5Etfw">June 4, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </center>
 
+---
 
+class: top, center
 
+.frame[
+
+# Tip #05: Use `here::here` for generating file paths
+
+]
+
+> If the first line of your R script is  
+> `setwd("C:\Users\jenny\path\that\only\I\have")`  
+> I will come into your office and SET YOUR COMPUTER ON FIRE 🔥.
+>
+> [Jenny Bryan](https://www.tidyverse.org/blog/2017/12/workflow-vs-script/)
+
+---
+
+class: middle, inverse
+background-image: url("images/here-function-drake-meme.png")
+background-position: right
+background-size: contain
+
+## All hail [@krlmlr](https://twitter.com/krlmlr?s=20)! 
+
+<img style="border-radius: 50%;" src="https://unavatar.vercel.app/twitter/krlmlr" width="150px"/> 
 
