--- a/index.Rmd
+++ b/index.Rmd
@@ -204,9 +204,29 @@ knitr::include_url(
 )
 ```
 
+---
 
+class: top, left
 
+.frame[
 
+# Tip #09: Use **TablesGenerator** for generating markdown tables
+
+]
+
+> Quickly and easily generate markup for tables in LaTeX, HTML, plain text, Markdown and MediaWiki formats.
+>
+> .center[[onethingwell.org](https://onethingwell.org/post/75483091484/tablesgenerator)] 
+
+---
+
+class: middle, center
+
+```{r echo = FALSE}
+knitr::include_url(
+  "https://www.tablesgenerator.com/markdown_tables", height = "600px"
+)
+```
 
 
 
