Add tip on using geom_blank()

--- a/index.Rmd
+++ b/index.Rmd
@@ -272,6 +272,18 @@ class: middle, center
 knitr::include_graphics("https://raw.githubusercontent.com/milesmcbain/datapasta/master/inst/media/tribble_paste.gif")
 ```
 
+---
 
+class: top, left
+
+.frame[
+
+# Tip #12: Use **geom_blank()** for setting pretty axis limits for faceted plots
+
+]
+
+> Using `facet_wrap()` in ggplot2 is a great way to create multiple panelled plots. Though when I am running these, particularly on datasets with different scales, **the axis are not as clean as I like**.
+>
+> .center[[Christopher Chizinski](https://chrischizinski.github.io/rstats/using_geom_blank/)]
 
 
