--- a/index.Rmd
+++ b/index.Rmd
@@ -68,17 +68,23 @@ class: middle, center, inverse
 
 ---
 
-class: top, center
+class: top, left
 
 .frame[
 
-# Tip #01: Use `setup` label for your setup chunk
+# Tip #01: Use **setup** label for your setup chunk
 
 ]
 
 > "There is one chunk name that imbues special behaviour: **setup**. When you’re in a notebook mode, the chunk named setup will be run automatically once, before any other code is run."
 >
-> [R4DS](https://r4ds.had.co.nz/r-markdown.html#chunk-name)
+> .center[[R4DS](https://r4ds.had.co.nz/r-markdown.html#chunk-name)]
+
+---
+
+class: middle, center
+
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/DxuT_qOev-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ---
 
