--- a/index.Rmd
+++ b/index.Rmd
@@ -122,17 +122,23 @@ class: middle, center
 
 ---
 
-class: top, center
+class: top, left
 
 .frame[
 
-# Tip #03: Don't import the whole namespace if all you need is a couple of functions
+# Tip #03: Don't import the **whole namespace** if all you need is a couple of functions
 
 ]
 
 <center>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">FWIW you can accomplish something similar with base R tools now: e.g. `library(pkg, include.only = c(&quot;f1&quot;, &quot;f2&quot;))` will load &lt;pkg&gt; but only put functions f1 and f2 on the search path. Moral equivalent of &quot;from pkg import f1, f2&quot;?</p>&mdash; Kevin Ushey (@kevin_ushey) <a href="https://twitter.com/kevin_ushey/status/1281085273154048000?ref_src=twsrc%5Etfw">July 9, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </center>
+
+---
+
+class: middle, center
+
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/w0qWm9aHb9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ---
 
