--- a/index.Rmd
+++ b/index.Rmd
@@ -362,6 +362,12 @@ class: top, left
 
 ---
 
+class: middle, center
+
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/vvW8zAR92X8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+---
+
 class: top, left
 
 .frame[
@@ -401,6 +407,12 @@ class: top, left
 > "A Swiss-Army Knife for Data I/O"
 >
 > .center[[Chung-hong Chan](https://cloud.r-project.org/web/packages/rio/vignettes/rio.html)]
+
+---
+
+class: middle, center
+
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/nfKi_O6hJbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ---
 
