--- a/index.Rmd
+++ b/index.Rmd
@@ -189,6 +189,12 @@ background-size: contain
 
 ---
 
+class: middle, center
+
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/gock2RtsppY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+---
+
 class: top, left
 
 .frame[
