--- a/index.Rmd
+++ b/index.Rmd
@@ -308,6 +308,12 @@ class: middle, center
  
 ---
 
+class: middle, center
+
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/t94A96fQnLU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+---
+
 class: top, left
 
 .frame[
