--- a/index.Rmd
+++ b/index.Rmd
@@ -356,6 +356,12 @@ class: top, left
 
 ---
 
+class: middle, center
+
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/0UQbJLptZUo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+---
+
 class: top, left
 
 .frame[
