--- a/index.Rmd
+++ b/index.Rmd
@@ -72,7 +72,7 @@ class: top, left
 
 .frame[
 
-# Tip #01: Use **setup** label for your setup chunk
+# Tip #01: Use setup label for your setup chunk
 
 ]
 
