--- a/index.Rmd
+++ b/index.Rmd
@@ -11,12 +11,18 @@ output:
     seal: false
     lib_dir: libs
     nature:
+      slideNumberFormat: |
+        <div class="progress-bar-container">
+          <div class="progress-bar" style="width: calc(%current% / %total% * 100%);"></div>
+        </div>
       highlightStyle: solarized-light
       highlightLanguage: ["r", "css", "yaml"]
       highlightLines: true
       countIncrementalSlides: false
       ratio: "16:9"
       beforeInit: "https://platform.twitter.com/widgets.js"
+    includes:
+      in_header: "assets/header.html"
 ---
 
 class: title-slide, left, middle
